[gd_scene load_steps=22 format=2]

[ext_resource path="res://app_core/modules/dynamic_button/dynamic_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://app_core/modules/viewer/Viewer.tscn" type="PackedScene" id=2]
[ext_resource path="res://app_core/modules/camera/MainCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://app_core/modules/awesome_button/Button_icon_title.tscn" type="PackedScene" id=4]
[ext_resource path="res://app_core/shaders/corner_radius.shader" type="Shader" id=5]
[ext_resource path="res://DemoApp/main_template.gd" type="Script" id=6]
[ext_resource path="res://app_core/modules/images/hero-image.png" type="Texture" id=7]
[ext_resource path="res://app_core/modules/background_scene/Background_scene.tscn" type="PackedScene" id=8]
[ext_resource path="res://app_core/modules/panel_round/Panel_round.tscn" type="PackedScene" id=9]
[ext_resource path="res://app_core/modules/buttons/button_border.tscn" type="PackedScene" id=10]
[ext_resource path="res://app_core/modules/slider_side_menu/slider_menu.tscn" type="PackedScene" id=11]
[ext_resource path="res://app_core/modules/awesome_button/Button_icon.tscn" type="PackedScene" id=12]
[ext_resource path="res://app_core/modules/topBar/Top_bar.tscn" type="PackedScene" id=14]
[ext_resource path="res://app_core/fonts_preload/DroidSans.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://app_core/modules/dynamic_label/dynamic_label.tscn" type="PackedScene" id=16]
[ext_resource path="res://app_core/modules/images/parallax.jpg" type="Texture" id=17]

[sub_resource type="Environment" id=5]
background_mode = 4
glow_strength = 1.34
glow_blend_mode = 0
glow_hdr_scale = 4.0
glow_high_quality = true

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.584314, 0.866667, 1 )
corner_detail = 4

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/corner_radius = 300.0

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 15 )

[node name="Dashboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="Top_bar" parent="." instance=ExtResource( 14 )]

[node name="Label" parent="Top_bar/elements/MarginContainer_top/HBoxContainer/Title_bar" index="0"]
custom_fonts/font = SubResource( 1 )

[node name="back_color" parent="Top_bar/elements/Panel_round" index="0"]
margin_bottom = 90.0
custom_styles/panel = SubResource( 6 )

[node name="Panel_menu" parent="." instance=ExtResource( 11 )]
speed_menu = 7
size_x = 60

[node name="MarginContainer" parent="Panel_menu" index="2"]
margin_left = -321.0
margin_right = -404.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 357.992, -0.0078125 )

[node name="ColorRect" parent="Panel_menu/MarginContainer" index="0"]
margin_right = 317.0
margin_bottom = 703.0

[node name="VBoxContainer" parent="Panel_menu/MarginContainer" index="1"]
margin_right = 317.0
margin_bottom = 703.0

[node name="ScrollContainer" parent="Panel_menu/MarginContainer/VBoxContainer" index="0"]
margin_right = 317.0
margin_bottom = 649.0

[node name="Menu_Item" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer" index="0"]
margin_right = 317.0
margin_bottom = 649.0
size_flags_vertical = 3

[node name="image" type="MarginContainer" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer/Menu_Item" index="0"]
margin_right = 317.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="TextureRect" type="TextureRect" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer/Menu_Item/image"]
material = SubResource( 4 )
margin_right = 317.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Panel_round" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer/Menu_Item/image" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 317.0
margin_bottom = 200.0

[node name="Button_icon" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer/Menu_Item" index="1" instance=ExtResource( 12 )]
visible = false
margin_top = 202.0
margin_right = 317.0
margin_bottom = 252.0
icon = "users"
path_scn = "res://DemoApp/Test.tscn"

[node name="Button_icon_title" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer/Menu_Item" index="2" instance=ExtResource( 4 )]
margin_top = 202.0
margin_right = 317.0
margin_bottom = 270.0
ID = "Users"
icon = "users"
title_color = Color( 0.207843, 0.207843, 0.207843, 1 )
btn_title = "Users"
path_scn = "res://DemoApp/Test.tscn"

[node name="Button_icon2" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer/Menu_Item" index="3" instance=ExtResource( 12 )]
visible = false
margin_top = 254.0
margin_right = 317.0
margin_bottom = 304.0
icon = "share"

[node name="Button_icon3" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer/Menu_Item" index="4" instance=ExtResource( 12 )]
margin_top = 272.0
margin_right = 317.0
margin_bottom = 322.0
icon = "cog"

[node name="Label_dinamic" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer/Menu_Item" index="5" instance=ExtResource( 16 )]
visible = false
margin_top = 306.0
margin_right = 317.0
margin_bottom = 330.0
custom_colors/font_color = Color( 0.513726, 0.513726, 0.513726, 1 )
custom_fonts/font = SubResource( 3 )
text = "Example Text "
align = 1
title_size = 20
Title_color = Color( 0.513726, 0.513726, 0.513726, 1 )
font = ExtResource( 15 )

[node name="button_dynamic" parent="Panel_menu/MarginContainer/VBoxContainer/ScrollContainer/Menu_Item" index="6" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 324.0
margin_right = 317.0
margin_bottom = 369.0
Title_message = "Slider"
scn_path = "res://app_core/modules/slider_gallery/SliderMain.tscn"

[node name="Menu_conf" parent="Panel_menu/MarginContainer/VBoxContainer" index="1"]
margin_top = 653.0
margin_right = 317.0
margin_bottom = 703.0

[node name="ColorRect" parent="Panel_menu/MarginContainer/VBoxContainer/Menu_conf" index="0"]
margin_right = 317.0

[node name="Container_btn" parent="Panel_menu/MarginContainer/VBoxContainer/Menu_conf" index="1"]
margin_right = 317.0
alignment = 1

[node name="Button_icon4" parent="Panel_menu/MarginContainer/VBoxContainer/Menu_conf/Container_btn" index="0" instance=ExtResource( 12 )]
margin_left = 121.0
margin_right = 169.0
icon = "home"

[node name="Button_icon5" parent="Panel_menu/MarginContainer/VBoxContainer/Menu_conf/Container_btn" index="1" instance=ExtResource( 12 )]
margin_left = 169.0
margin_right = 195.0
icon = "ellipsis-v"

[node name="MainCamera" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Background_scene" parent="." instance=ExtResource( 8 )]
texture_path = ExtResource( 17 )
back_color = Color( 0.105882, 0.105882, 0.137255, 1 )

[node name="Viewer" parent="." instance=ExtResource( 2 )]
anchor_top = 0.128571

[node name="ScrollContainer" parent="Viewer" index="0"]
margin_bottom = 600.0

[node name="List" parent="Viewer/ScrollContainer" index="0"]
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 5
form_type = "conf_leader"
form_request_type = ""
form_table_name = ""
field_instance_name = "Field_conf"
DB_name = "leader_conf.cfg"
DB_table = "CONF"
set_init = false

[node name="TextureRect" type="TextureRect" parent="Viewer/ScrollContainer/List" index="0"]
margin_right = 360.0
margin_bottom = 569.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="button_dynamic" parent="Viewer/ScrollContainer/List" index="1" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 512.0
margin_right = 360.0
margin_bottom = 557.0
Title_message = "Signup"
message_param = [ "click_btnxx" ]
scn_path = "res://DemoApp/signup_form.tscn"

[node name="button_border" parent="Viewer/ScrollContainer/List" index="2" instance=ExtResource( 10 )]
margin_left = 0.0
margin_top = 574.0
margin_right = 360.0
margin_bottom = 600.0
Title_message = "SIGNUP"
title_size = 20
font_color_hover = Color( 1, 0, 0.470588, 1 )
scn_path = "res://DemoApp/signup_form.tscn"

[editable path="Top_bar"]
[editable path="Top_bar/elements/Panel_round"]
[editable path="Panel_menu"]
[editable path="Viewer"]
